syntax = "proto3";

package reaction;

option go_package = "github.com/area/grpc-go/service";

service ReactionService {
  // Register an area in the database
  rpc RegisterAction(ReactionRequest) returns (ReactionResponse) {}

  // Launch the reactions associated with the action
  rpc LaunchReaction(LaunchRequest) returns (LaunchResponse) {}

  // Deactivate an area with the id given
  rpc SetActivate(AreaDeactivator) returns (AreaDeactivator) {}
}

message Action {
  string service = 1;
  string microservice = 2;
  bytes ingredients = 3;
}

message Reaction {
  string service = 1;
  string microservice = 2;
  bytes ingredients = 3;
}

message ReactionRequest {
  Action action = 1;
  Reaction reaction = 2;
}

message ReactionResponse {
  string description = 1;
  int64 action_id = 2;
}

////

message LaunchRequest {
  int64 action_id = 1;
  bytes prev_output = 2;
}

message LaunchResponse {
}

////

message AreaDeactivator {
  uint32 area_id = 1;
  bool activated = 2;
}
